8231055: C2: arraycopy with same non escaping src and dest but different positions causes wrong execution

Reviewed-by: thartmann, vlivanov